[package]
name = "Wireguard-W-RS"
version = "0.6.2"
edition = "2024"

[dependencies]
#smol = { version = "2.0", features = ["macros"] }
smol = "2.0"
dashmap = "5.5"
chrono = "0.4.43"
futures-lite = "2.0"
async-trait = "0.1"
libc = "0.2"
bytes = "1.5"
base64 = "0.21"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
#Concurrency
crossbeam-channel = "0.5"
#crossbeam-queue = "0.3"
num_cpus = "1.16"
# Cryptography
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
blake2 = "0.10"
hmac = "0.12"
digest = "0.10"
# Network
ipnet = "2.9"
# Data structures
bitvec = "1.0"
ctrlc = "3.4"
# NPatricia Tree (Efficient IP Lookup)
patricia_tree = "0.8"

#OLD
crossbeam-queue = "0.3.12"
futures = "0.3.31"

[features]
default = []
amnezia = []